k8s/services/frontend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault-frontend
  namespace: vault-prod
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault-frontend
  template:
    metadata:
      labels:
        app: vault-frontend
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001
        fsGroup: 1001
      imagePullSecrets:
        - name: ghcr-login
      containers:
      - name: frontend
        image: ghcr.io/victoragahi/vault-frontend:bbbfa0bf70d85ad900b29c8037b51f129dea96df
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
          name: http
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "250m"
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
        volumeMounts:
        - name: next-cache
          mountPath: /app/.next/cache
      volumes:
      - name: next-cache
        emptyDir: {}
