k8s/services/frontend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-frontend
  namespace: vault-prod
spec:
  type: NodePort
  selector:
    app: vault-frontend
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 31415
    name: http
