k8s/services/frontend/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault-frontend
  namespace: vault-prod
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: vault-prod-security-headers@kubernetescrd
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - vault-mind.cyrus-ag.com
    - api-vault-mind.cyrus-ag.com
    secretName: vault-tls
  rules:
  - host: vault-mind.cyrus-ag.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault-frontend
            port:
              number: 80
  - host: api-vault-mind.cyrus-ag.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vault-backend
            port:
              number: 80
